# html-fetcher

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: publish-docker.yml
docker/: entrypoint.sh
docs/: Browser automation.md  Browser impersonation.md  DataDome.md  Design decisions.md  Headless vs. headed mode.md
src/: main.py
src/api/: fetch_router.py
src/api/dto/: fetch_dto.py
src/client/: camoufox_html_fetcher.py  curl_cffi_client.py  curl_cffi_html_fetcher.py  html_fetcher.py  playwright_client.py  zendriver_html_fetcher.py
src/model/: app_config.py  fetch_result.py
src/service/: app_config_parser.py  fetch_service.py  html_sanitizer_service.py
tests/: conftest.py  test_fetch_service.py  test_live.py
