[project]
name = "html-fetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camoufox>=0.4.0",
    "curl-cffi>=0.15.0",
    "fastapi>=0.136.0",
    "pydantic>=2.13.2",
    "uvicorn>=0.44.0",
    "zendriver>=0.15.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]
